--- a/Documentation/Preface.tex
+++ b/Documentation/Preface.tex
@@ -7,9 +7,9 @@
 The {\em Home Librarian} system maintains a database of ``cards'',
 which describe books, magazines, video and audio tapes, CDs, record
 albums, laser disks, and other similar items. Version 3 of the system
-uses a relational database backend (such as PostgreSQL, MySQL, SQL
-Server, or SQLite). It connects to the backend database via a ODBC
-driver library, so any backend database system that has a ODBC driver
+uses a relational database back-end (such as PostgreSQL, MySQL, SQL
+Server, or SQLite). It connects to the back-end database via a ODBC
+driver library, so any back-end database system that has a ODBC driver
 library can be used.  The system uses two database tables, a table of
 cards and a table of keywords.  The system also hooks into Amazon's
 database using Amazon Web Services.
