--- a/Documentation/Reference.tex
+++ b/Documentation/Reference.tex
@@ -12,7 +12,7 @@ fashion.  That is, {\tt "The Door Into Summer"} is the same as {\tt
 subjects are converted to all uppercase letters.  There is also a
 keyword table that associates keywords (search terms) with each card.
 
-\begin{table}[h]
+\begin{table}[hpt]
 \begin{tabular}{|l|l|p{3in}|}
 \hline
 Name&Type&Description \\
@@ -52,11 +52,22 @@ fields, a 64 character keyword and a 36 character card key.
 
 \section{Main GUI Window}
 
-
-
-
+\begin{figure}[hpt]
+\begin{centering}
+\includegraphics[width=5in]{MainWindow.png}
+\caption{The main window of the Home Librarian application}
+\label{fig:ref:MainWindow}
+\end{centering}
+\end{figure}
+\begin{figure}[hpt]
+\begin{centering}
+\includegraphics[width=5in]{CardCatDrawer.png}
+\caption{Card Catelog Drawer}
+\label{fig:ref:headerAnimation}
+\end{centering}
+\end{figure}
 The main window of the Home Librarian application, as shown in
-Figure~ref{fig:ref:MainWindow}, has a progress and status section at
+Figure~\ref{fig:ref:MainWindow}, has a progress and status section at
 the top of the GUI\footnote{Below the attached menu bar.}, consisting
 of a ``face'' area and a progress and status area. The face area holds
 either a forward facing librarian image, when the GUI is idle and
@@ -66,7 +77,7 @@ either holds the message ``How May I Help You?'' or some sort of status
 message, usually detailing the number of matches found when searching,
 when the application is idle. When the application is working an
 animation of a card catalog drawer being opened and flipped through is
-displayed, as shown in Figure~ref{fig:ref:headerAnimation}.
+displayed, as shown in Figure~\ref{fig:ref:headerAnimation}.
 
 
 
