--- a/Documentation/Reference.tex
+++ b/Documentation/Reference.tex
@@ -79,8 +79,49 @@ when the application is idle. When the application is working an
 animation of a card catalog drawer being opened and flipped through is
 displayed, as shown in Figure~\ref{fig:ref:headerAnimation}.
 
+\begin{figure}[hpt]
+\begin{centering}
+\includegraphics{MainWindowAnnotated.pdf}
+\caption{Main Window, annotated.}
+\label{fig:ref:mainwindowAnno}
+\end{centering}
+\end{figure}
+Below the progress and status section is the main interaction area.
+Initialially, this contains three big buttons giving access to the major
+functions of the application, as shown in
+Figure~\ref{fig:ref:mainwindowAnno}. 
+
+\subsection{Buttons on the main window}
+
+There are two main functions supplied by the application: searching a
+card catalog database, described in Section~\ref{sect:ref:search} and
+editing a card catalog database, described in
+Section~\ref{sect:ref:update}. The top most button in the initial (and
+idle) state of the main GUI selects the searching function. The next
+button selects the editing (update) function. The bottom button exits
+the application. All of these operations are available from the File
+menu item as well, along with some additional operations.
+
+\section{Searching a database (card catalog)}
+\label{sect:ref:search}
+
+\begin{figure}[hpt]
+\begin{centering}
+\includegraphics[width=5in]{SearchWindowAnnotated.pdf}
+\caption{Search Window, annotated.}
+\label{fig:ref:searchwindowAnno}
+\end{centering}
+\end{figure}
+The Search function version of the Main GUI Window is shown in
+Figure~\ref{fig:ref:searchwindowAnno}. This version of the main window has
+a place for entering a search pre x string, a set of search index
+selection buttons, a search results list box, a set of search results
+disposition buttons, a notepad (text) area for making notes, and a set
+of overall control buttons.
 
 
+\section{Updating a database (card catelog)}
+\label{sect:ref:update}
 
 
 
