--- a/Documentation/UserManual.tex
+++ b/Documentation/UserManual.tex
@@ -6,6 +6,8 @@
 \usepackage{url}
 \usepackage{supertabular}
 \usepackage{MyTitlepage}
+
+\usepackage{pstricks}
 \pagestyle{headings}
 \makeindex
 \emergencystretch=50pt
