--- a/Documentation/Reference.tex
+++ b/Documentation/Reference.tex
@@ -190,6 +190,7 @@ Section~\ref{sect:ref:viewamazondata}).
 
 \section{Dialog Boxes}
 \subsection{Get Connection String Dialog}
+\label{sect:ref:getconnectionstring}
 This dialog box creates the connection string needed to connect to the
 database via the ODBC API. The dialog shows lists of the available
 drivers and available datasources.  Either a datasource can be used
